# program

./: CMakeLists.txt  main.cpp
application/: CMakeLists.txt
application/include/: library.h
application/lib/: application.lib
application/lib/cmake/: FindApplication.cmake
application/src/: library.cpp
control/: CMakeLists.txt
control/include/: control.h
control/lib/cmake/: FindControl.cmake
control/src/: control.cpp  render.cpp
model/: CMakeLists.txt
model/include/: library.h
model/lib/: model.lib
model/src/: model.cpp
presentation/: CMakeLists.txt  main.cpp
ui_control/: CMakeLists.txt
ui_control/include/: application.h  button.h  component.h  factory.h  render.h
ui_control/lib/: ui_control.lib
ui_control/lib/cmake/: Findui_control.cmake
ui_control/src/: application.cpp  button.cpp  component.cpp  factory.cpp
